--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -42,13 +42,13 @@ jobs:
 
         cd SharpChrome
         Get-Content -Path alias.json | ..\.\jq.exe ".version |= `"$Version`"" > ./compiled/alias.json
-        Copy-Item -Path ..\LICENSE.txt -Destination compiled\LICENSE
+        Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
         tar.exe -czvf ..\SharpChrome.tar.gz .
 
         cd ..\..\SharpDPAPI
         Get-Content -Path alias.json | ..\.\jq.exe ".version |= `"$Version`"" > ./compiled/alias.json
-        Copy-Item -Path ..\LICENSE.txt -Destination compiled\LICENSE
+        Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
         tar.exe -czvf ..\SharpChrome.tar.gz .
     - name: Sign Package
