--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -50,7 +50,7 @@ jobs:
         Get-Content -Path alias.json | ..\.\jq.exe ".version |= `"$Version`"" > ./compiled/alias.json
         Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
-        tar.exe -czvf ..\..\SharpChrome.tar.gz .
+        tar.exe -czvf ..\..\SharpDPAPI.tar.gz .
     - name: Sign Package
       run: |
         Write-Output "${{ secrets.MINISIGN_PRIVATE_KEY }}" > minisign.key
