--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -38,16 +38,15 @@ jobs:
         pwd
         ls
         $Version = git.exe describe --tags --abbrev=0
-        $Version = "`"$Version`""
 
         cd SharpChrome
-        Get-Content -Path alias.json | ..\.\jq.exe ".version |= `"$Version`"" > ./compiled/alias.json
+        Get-Content -Path alias.json | .\jq.exe --arg ver "$Version" '.version |= $ver' > ./compiled/alias.json
         Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
         tar.exe -czvf ..\..\sharpchrome.tar.gz .
 
         cd ..\..\SharpDPAPI
-        Get-Content -Path alias.json | ..\.\jq.exe ".version |= `"$Version`"" > ./compiled/alias.json
+        Get-Content -Path alias.json | .\jq.exe --arg ver "$Version" '.version |= $ver' > ./compiled/alias.json
         Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
         tar.exe -czvf ..\..\sharpdpapi.tar.gz .
