correct the path to jq.exe

--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -40,13 +40,13 @@ jobs:
         $Version = git.exe describe --tags --abbrev=0
 
         cd SharpChrome
-        Get-Content -Path alias.json | .\jq.exe --arg ver "$Version" '.version |= $ver' > ./compiled/alias.json
+        Get-Content -Path alias.json | ..\.\jq.exe --arg ver "$Version" '.version |= $ver' > ./compiled/alias.json
         Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
         tar.exe -czvf ..\..\sharpchrome.tar.gz .
 
         cd ..\..\SharpDPAPI
-        Get-Content -Path alias.json | .\jq.exe --arg ver "$Version" '.version |= $ver' > ./compiled/alias.json
+        Get-Content -Path alias.json | ..\.\jq.exe --arg ver "$Version" '.version |= $ver' > ./compiled/alias.json
         Copy-Item -Path ..\LICENSE -Destination compiled\LICENSE
         cd compiled
         tar.exe -czvf ..\..\sharpdpapi.tar.gz .
